--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 	<section>
 		<div class="container">
 			<div class="user signinBx">
-				<div class="imgBx"><img src="images/e.jpg"></div>
+				<div class="imgBx"><img src="e.jpg"></div>
 				<div class="formBx">
 					<form>
 						<h2>Sign In</h2>
@@ -22,7 +22,6 @@
 				</div>
 			</div>
 			<div class="user signupBx">
-				<div class="imgBx"><img src="images/e.jpg"></div>
 				<div class="formBx">
 					<form>
 						<h2>Create an account</h2>
@@ -34,7 +33,7 @@
 						<p class="signup">Don't have an account ? <a href="#" onclick="toggleForm();">Sign in</a></p>
 					</form>
 				</div>
-				<div class="imgBx"><img src="images/f.jpg"></div>
+				<div class="imgBx"><img src="f.jpg"></div>
 			</div>
 		</div>
 	</section>
