--- a/coffee.html
+++ b/coffee.html
@@ -61,11 +61,11 @@
 					<a href="#" class="btn hvr-right my-4 text-capitalize">Know More</a>
 				</div>
 				<div class="col-md-6 about-images my-4 d-none d-lg-block">
-					<img src="images/a.jpg" alt="" class="img-1 img-thumbnail about-img">
-					<img src="images/c.jpg" alt="" class="img-2 img-thumbnail about-img">
-					<img src="images/d.jpg" alt="" class="img-3 img-thumbnail about-img">
-					<img src="images/e.jpg" alt="" class="img-4 img-thumbnail about-img">
-					<img src="images/f.jpg" alt="" class="img-5 img-thumbnail about-img">
+					<img src="a.jpg" alt="" class="img-1 img-thumbnail about-img">
+					<img src="c.jpg" alt="" class="img-2 img-thumbnail about-img">
+					<img src="d.jpg" alt="" class="img-3 img-thumbnail about-img">
+					<img src="e.jpg" alt="" class="img-4 img-thumbnail about-img">
+					<img src="f.jpg" alt="" class="img-5 img-thumbnail about-img">
 				</div>
 			</div>
 		</div>
@@ -152,7 +152,7 @@
 	<section class="most-liked p-5" id="d">
 		<div class="video-container">
 			<video class="bg-video" autoplay muted loop>
-				<source src="images/coffee.mp4" type="video/mp4">
+				<source src="coffee.mp4" type="video/mp4">
 			</video>
 		</div>
 		<div class="container-fluid">
@@ -170,7 +170,7 @@
 							<h4 class="font-weight-light title-text">Espresso</h4>
 						</div>
 						<div class="card-body">
-							<img src="images/a.jpg" lass="img-fluid rounded">
+							<img src="a.jpg" lass="img-fluid rounded">
 						</div>
 						<div class="card-footer">
 							with Muffin
@@ -190,7 +190,7 @@
 							<h4 class="font-weight-light title-text">Cafe Latte</h4>
 						</div>
 						<div class="card-body">
-							<img src="images/a.jpg" lass="img-fluid rounded">
+							<img src="a.jpg" lass="img-fluid rounded">
 						</div>
 						<div class="card-footer">
 							with croissant
@@ -210,7 +210,7 @@
 							<h4 class="font-weight-light title-text">Cappuccino</h4>
 						</div>
 						<div class="card-body">
-							<img src="images/a.jpg" lass="img-fluid rounded">
+							<img src="a.jpg" lass="img-fluid rounded">
 						</div>
 						<div class="card-footer">
 							with Chocolate Cookies
